framec_tests/language_specific/java/v3_outline/positive/basic_outline.frm
@target java

system S {
    actions:
        doIt() {
            // native body
        }
}
