framec_tests/language_specific/java/v3_outline/negative/state_missing_brace.frm
@target java

system S {
    machine:
        $A 
}

